--- a/client/src/components/ProdactCard/ProdactCard.module.css
+++ b/client/src/components/ProdactCard/ProdactCard.module.css
@@ -1,10 +1,23 @@
 .card {
+  position: relative;
   margin-bottom: 2rem;
   padding: 1rem;
   text-align: center;
   box-shadow: 3px 5px 15px 0px rgba(110, 30, 147, 0.2);
   border-radius: 5px;
 }
+.iconBin {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  font-size: 1.5rem;
+  color: red;
+  transition: all 0.3s;
+}
+.iconBin:hover{
+  transform: scale(1.2);
+}
+
 .card img {
   width: 16.25rem;
   height: 16.25rem;
@@ -119,4 +132,3 @@
   text-decoration: underline;
   cursor: pointer;
 }
-
