validate field in create & edit prodact

--- a/client/src/components/Modals/Modals.module.css
+++ b/client/src/components/Modals/Modals.module.css
@@ -108,3 +108,11 @@ input[type="file"] {
 .control button{
   margin: 0.5rem;
 }
+.errorMessage {
+  color: red;
+  font-size: 0.7rem;
+}
+
+.errSize{
+  max-width: 7rem;
+}
