admi edit/delete category/subcategory,corrected checkrolemiddleware

--- a/client/src/components/Modals/Modals.module.css
+++ b/client/src/components/Modals/Modals.module.css
@@ -24,15 +24,12 @@
   padding: 0.3rem;
   font-size: 1rem;
 }
-.add,
-.authModal .add {
+
+.authModal {
   text-transform: uppercase;
   border-radius: 5px;
 }
 
-.add:hover{
-  background-color: #f4dbfd;
-}
 .authModal p {
   margin-bottom: 0.5rem;
   font-size: 1.2rem;
@@ -47,10 +44,10 @@
   font-size: 1.1rem;
   text-decoration: underline;
 }
-.redBorder{
-border-color: red;
+.redBorder {
+  border-color: red;
 }
-.errorMessage{
+.errorMessage {
   margin-bottom: 1rem;
   color: #f06868;
 }
@@ -68,7 +65,7 @@ border-color: red;
 .sizes input {
   max-width: 5rem;
 }
-input[type="file"] {
+input[type='file'] {
   display: none;
 }
 .fileUpload {
@@ -79,33 +76,33 @@ input[type="file"] {
   padding: 6px 12px;
   cursor: pointer;
 }
-.fileUpload:hover{
+.fileUpload:hover {
   background-color: blueviolet;
   border: 1px solid blueviolet;
 }
-.iconDownload{
+.iconDownload {
   margin-left: 0.3rem;
   font-size: 1.1rem;
 }
 
-.stars{
+.stars {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
 }
-.stars p{
+.stars p {
   font-size: 1.7rem;
   padding: 0.3rem;
   cursor: pointer;
 }
-.starFill{
-  color: gold
+.starFill {
+  color: gold;
 }
-.ratingModal p{
+.ratingModal p {
   margin-bottom: 1.3rem;
 }
-.control button{
+.control button {
   margin: 0.5rem;
 }
 .errorMessage {
@@ -113,6 +110,49 @@ input[type="file"] {
   font-size: 0.7rem;
 }
 
-.errSize{
+.errSize {
   max-width: 7rem;
+}
+.edit {
+  display: flex;
+}
+.iconBin {
+  font-size: 1.2rem;
+  color: #c45050;
+  transition: all 0.3s;
+}
+.iconEdit {
+  font-size: 1.1rem;
+  color: rgb(244, 244, 137);
+  transition: all 0.3s;
+}
+.iconBin:hover,
+.iconEdit:hover {
+  transform: scale(1.2);
+}
+.editPanel {
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.7rem;
+}
+.catList {
+  text-align: start;
+  text-transform: uppercase;
+}
+.catList li {
+  margin-bottom: 1rem;
+}
+.subcatList {
+  margin-left: 2rem;
+  text-transform: lowercase;
+}
+.subcatList li {
+  margin-bottom: 0;
+}
+.add {
+  display: flex;
+  gap: 0.3rem;
+  align-items: center;
+  color: gray;
 }
