--- a/client/src/components/EditCategoryName.jsx/EditCategoryName.module.css
+++ b/client/src/components/EditCategoryName.jsx/EditCategoryName.module.css
@@ -5,7 +5,7 @@
 }
 .editName, .redBorder {
   padding: 0.4rem;
-  background-color: #c9b3de;
+  background-color: #553f69;
   color: wheat;
   text-transform: uppercase;
   margin-right: 0.3rem;
@@ -25,3 +25,6 @@
   font-size: 2.2rem;
   transform: rotate(90deg);
 }
+/* .check:hover{
+  background-color: white !important;
+  } */
