--- a/client/src/components/EditSubcategoryName.jsx/EditSubcategoryName.module.css
+++ b/client/src/components/EditSubcategoryName.jsx/EditSubcategoryName.module.css
@@ -5,7 +5,7 @@
 }
 .editName, .redBorder {
   padding: 0.4rem;
-  background-color: #c9b3de;
+  background-color: #553f69;
   color: wheat;
   text-transform: lowercase;
   margin-right: 0.3rem;
@@ -24,4 +24,7 @@
   color: #d18d8d;
   font-size: 2.2rem;
   transform: rotate(90deg);
+}
+.check:hover{
+background-color: white !important;
 }
