--- a/client/src/components/Modals/Modals.module.css
+++ b/client/src/components/Modals/Modals.module.css
@@ -154,5 +154,9 @@ input[type='file'] {
   display: flex;
   gap: 0.3rem;
   align-items: center;
-  color: gray;
+  transition: all 0.5s;
+}
+.add:hover{
+  background-color: #70419a;
+  color: white;
 }
