--- a/client/src/components/SortBy/SortBy.module.css
+++ b/client/src/components/SortBy/SortBy.module.css
@@ -33,6 +33,7 @@
     padding: 0.8rem 0 0.8rem;
     background-color: #f9f9f9;
     border-radius: 0.6rem;
+    z-index: 9;
   }
   .select li {
     padding: 0.6rem 1rem 0.6rem;
